--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^1.1.2",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
     "common-tags": "^1.8.2",
